--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -59,7 +59,7 @@
     <Compile Include="ViewModel.cs" />
     <Compile Include="ViewModelHelper.cs" />
     <Compile Include="RenameFileDialog.cs">
-      <DependentUpon>ReenameFileDialog.xaml</DependentUpon>
+      <DependentUpon>RenameFileDialog.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -76,7 +76,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="ReenameFileDialog.xaml">
+    <Page Include="RenameFileDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
