--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -60,8 +60,8 @@
     </Compile>
     <Compile Include="FolderViewModel.cs" />
     <Compile Include="FolderViewModelNavigationEventArgs.cs" />
-    <Compile Include="ImmutableFolder.cs" />
-    <Compile Include="ImmutableFolderItem.cs" />
+    <Compile Include="FolderModel.cs" />
+    <Compile Include="FolderItemModel.cs" />
     <Compile Include="InaccessableImmutableFolder.cs" />
     <Compile Include="RenameFileDialog.cs">
       <DependentUpon>RenameFileDialog.xaml</DependentUpon>
@@ -80,7 +80,7 @@
     </Compile>
     <Compile Include="FileTypeUtility.cs" />
     <Compile Include="FileUtility.cs" />
-    <Compile Include="ItemTypeToIconConverter.cs" />
+    <Compile Include="FileTypeToIconConverter.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
