--- a/Noria/Noria.csproj
+++ b/Noria/Noria.csproj
@@ -55,22 +55,24 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="DirectoryPathBreadCrumb.xaml.cs">
+    <Compile Include="Noria.UI\DirectoryPathBreadCrumb.xaml.cs">
       <DependentUpon>DirectoryPathBreadCrumb.xaml</DependentUpon>
     </Compile>
-    <Compile Include="FolderViewModel.cs" />
-    <Compile Include="FolderViewModelNavigationEventArgs.cs" />
-    <Compile Include="FolderModel.cs" />
-    <Compile Include="FolderItemModel.cs" />
-    <Compile Include="InaccessableImmutableFolder.cs" />
-    <Compile Include="RenameFileDialog.cs">
+    <Compile Include="Noria.ViewModel\FileFolderItemModel.cs" />
+    <Compile Include="Noria.ViewModel\FolderFolderItemModel.cs" />
+    <Compile Include="Noria.ViewModel\FolderViewModel.cs" />
+    <Compile Include="Noria.ViewModel\FolderViewModelNavigationEventArgs.cs" />
+    <Compile Include="Noria.ViewModel\FolderModel.cs" />
+    <Compile Include="Noria.ViewModel\FolderItemModel.cs" />
+    <Compile Include="Noria.ViewModel\InaccessibleFolderModel.cs" />
+    <Compile Include="Noria.UI\RenameFileDialog.cs">
       <DependentUpon>RenameFileDialog.xaml</DependentUpon>
     </Compile>
-    <Page Include="DirectoryPathBreadCrumb.xaml">
+    <Page Include="Noria.UI\DirectoryPathBreadCrumb.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainWindow.xaml">
+    <Page Include="Noria.UI\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -78,14 +80,13 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="FileTypeUtility.cs" />
-    <Compile Include="FileUtility.cs" />
-    <Compile Include="FileTypeToIconConverter.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Noria.Files\FileTypeUtility.cs" />
+    <Compile Include="Noria.UI\FileTypeToIconConverter.cs" />
+    <Compile Include="Noria.UI\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="RenameFileDialog.xaml">
+    <Page Include="Noria.UI\RenameFileDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
