--- a/Noria/Noria.csproj
+++ b/Noria/Noria.csproj
@@ -76,12 +76,14 @@
     <Compile Include="UI\FileSizeInBytesToProperUnitConverter.cs" />
     <Compile Include="ViewModel\FileFolderItemModel.cs" />
     <Compile Include="ViewModel\FolderFolderItemModel.cs" />
+    <Compile Include="ViewModel\FolderModelExtensions.cs" />
     <Compile Include="ViewModel\FolderTreeItemModel.cs" />
     <Compile Include="ViewModel\FolderTreeViewModel.cs" />
     <Compile Include="ViewModel\FolderViewModel.cs" />
     <Compile Include="ViewModel\FolderViewModelNavigationEventArgs.cs" />
     <Compile Include="ViewModel\FolderModel.cs" />
     <Compile Include="ViewModel\FolderItemModel.cs" />
+    <Compile Include="ViewModel\FolderViewModelUpdaterThroughWatchingFolder.cs" />
     <Compile Include="ViewModel\InaccessibleFolderModel.cs" />
     <Compile Include="UI\RenameFileDialog.cs">
       <DependentUpon>RenameFileDialog.xaml</DependentUpon>
